--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -132,6 +132,7 @@ nav:
                 - './microservices/device/supported/device-usb-camera/walkthrough/general-usage.md'
                 - './microservices/device/supported/device-usb-camera/walkthrough/custom-build.md'
               - Supplementary Information:
+                - './microservices/device/supported/device-usb-camera/supplementary-info/USB-protocol.md'
                 - './microservices/device/supported/device-usb-camera/supplementary-info/discovery.md'
                 - './microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md'   
           - Device Virtual:
