--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,13 @@
 site_name: EdgeX Foundry Documentation
 site_description: 'Documentation for use of EdgeX Foundry'
 site_author: 'Jim White'
-site_url: 'https://github.com/edgexfoundry/edgex-docs'
+site_url: 'https://docs.edgexfoundry.org/3.1'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2023 EdgeX Foundry'
 docs_dir: docs_src
 site_dir: docs/3.1
 strict: false   # mkdocs-materials will prevent running on 0.0.0.0 otherwise (or have custom image)
-extra:
-  version:
-    provider: mike
 validation:
   nav:
     omitted_files: info
@@ -249,6 +246,8 @@ markdown_extensions:
   - tables
   # - mdx_truly_sane_lists
 extra:
+  version:
+    provider: mike
   social:
     - icon: 'fontawesome/brands/github-alt'
       link: 'https://github.com/edgexfoundry'
@@ -265,8 +264,6 @@ extra_css:
 - assets/stylesheets/edgey.css
 - assets/stylesheets/newexample.css
 - assets/stylesheets/extra.css
-extra_javascript:
-  - assets/javascripts/version-select.js
 plugins:
   - search
   - swagger-ui-tag
