feat: Add structure for available application services
Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,9 +148,13 @@ nav:
             - './microservices/application/ErrorHandling.md'
             - './microservices/application/BuiltIn.md'
             - './microservices/application/AdvancedTopics.md'
-        - './microservices/application/AppServiceConfigurable.md'
         - './microservices/application/GeneralAppServiceConfig.md'
         - './microservices/application/V3Migration.md'
+        - Available Services:
+            - Overview: './microservices/application/available/AvailableAppServices.md'
+            - './microservices/application/available/AppServiceConfigurable.md'
+            - './microservices/application/available/AppRecordReplay.md'
+            - './microservices/application/available/AppLLRPInventory.md'
   - Examples and Tutorials:
     - './examples/index.md'
     - './examples/Ch-ExamplesVirtualDeviceService.md'
