fix: remove mermaid and replace renders (#1209)
Signed-off-by: Christian Darr <Christian.darr@intel.com>
Signed-off-by: preethi-satishcandra <preethi.satishchandra@intel.com>
Co-authored-by: preethi-satishcandra <preethi.satishchandra@intel.com>

--- a/Dockerfile.docs
+++ b/Dockerfile.docs
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 Intel Corporation
+# Copyright (c) 2022-2023 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -21,8 +21,7 @@ RUN pip install "mkdocs==1.4.3" \
     "mkdocs-material==8.5.8" \
     "mkdocs-htmlproofer-plugin>=0.8" \
     "mkdocs-macros-plugin>=0.5" \
-    "mkdocs-swagger-ui-tag" \
-    "mkdocs-mermaid2-plugin"
+    "mkdocs-swagger-ui-tag" 
 
 EXPOSE 8000
 
