docs: docs for native remote deployment example added
Signed-off-by: preethi-satishcandra <preethi.satishchandra@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,9 @@ nav:
                 - './microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md'   
           - Device Virtual:
             - './microservices/device/supported/device-virtual/Ch-VirtualDevice.md'
+        - Remote Deployment:
+          - './microservices/device/remote/Ch-RemoteNonSecure.md'
+          - './microservices/device/remote/Ch-RemoteSecure.md'
         - './microservices/device/V3Migration.md'
       - Application Services:
         - Introduction: './microservices/application/ApplicationServices.md'
