feat: refactor of edgex docs
use of latest mkdocs with mike versioning

addition of home 'tile' like display

removed javascript for versioning

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/Dockerfile.docs
+++ b/Dockerfile.docs
@@ -17,8 +17,8 @@
 
 FROM python:3.10-slim
 
-RUN pip install "mkdocs==1.4.3" \
-    "mkdocs-material==8.5.8" \
+RUN pip install mkdocs \
+    "mkdocs-material==9.1.19" \
     "mkdocs-htmlproofer-plugin>=0.8" \
     "mkdocs-macros-plugin>=0.5" \
     "mkdocs-swagger-ui-tag" 
