feat: add edgexversoinmain for references to repo work not yet in v3
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -255,6 +255,7 @@ extra:
     provider: mike
   # - make edgexversion the latest version for repository tree references
   edgexversion: 'v3.0.0'
+  edgexversionmain: 'main'
   social:
     - icon: 'fontawesome/brands/github-alt'
       link: 'https://github.com/edgexfoundry'
