--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,76 +61,76 @@ nav:
         - microservices/support/scheduler/Ch-Scheduler.md
         - microservices/support/eKuiper/Ch-eKuiper.md
       - Device: 
-        - microservices/device/Ch-DeviceServices.md
+        - Overview: microservices/device/Ch-DeviceServices.md
         - microservices/device/profile/Ch-DeviceProfile.md
         - Device Service SDK: microservices/device/sdk/Ch-DeviceSDK.md
         - Device SDK API: microservices/device/sdk/SDK-Go-API.md
-        - Supported Device Services: 
-          - microservices/device/Ch-DeviceServiceList.md
+        - Device Services:
+          - Available Services: microservices/device/services/Ch-DeviceServiceList.md
           - Device Onvif Camera: 
-            - microservices/device/supported/device-onvif-camera/General.md
-            - microservices/device/supported/device-onvif-camera/swagger.md
+            - microservices/device/services/device-onvif-camera/General.md
+            - microservices/device/services/device-onvif-camera/swagger.md
             - Walkthrough:
-              - microservices/device/supported/device-onvif-camera/Walkthrough/setup.md
-              - microservices/device/supported/device-onvif-camera/Walkthrough/deployment.md
-              - microservices/device/supported/device-onvif-camera/Walkthrough/general-usage.md
-              - microservices/device/supported/device-onvif-camera/Walkthrough/custom-build.md
+              - microservices/device/services/device-onvif-camera/Walkthrough/setup.md
+              - microservices/device/services/device-onvif-camera/Walkthrough/deployment.md
+              - microservices/device/services/device-onvif-camera/Walkthrough/general-usage.md
+              - microservices/device/services/device-onvif-camera/Walkthrough/custom-build.md
             - Supplementary Information:
               - ONVIF Protocol:
-                - microservices/device/supported/device-onvif-camera/supplementary-info/ONVIF-protocol.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/onvif-user-authentication.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/ONVIF-protocol.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/onvif-user-authentication.md
               - Features: 
-                - microservices/device/supported/device-onvif-camera/supplementary-info/custom-metadata-feature.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/friendlyname-mac.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/device-status.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/auto-discovery.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/credentials.md 
-                - microservices/device/supported/device-onvif-camera/supplementary-info/reboot-needed.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/custom-metadata-feature.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/friendlyname-mac.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/device-status.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/auto-discovery.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/credentials.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/reboot-needed.md
               - API Reference:
-                - microservices/device/supported/device-onvif-camera/supplementary-info/api-analytic-support.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/api-event-handling.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/api-usage-user-handling.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/api-analytic-support.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/api-event-handling.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/api-usage-user-handling.md
               - Utility:
-                - microservices/device/supported/device-onvif-camera/supplementary-info/test-with-postman.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/utility-scripts.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/test-with-postman.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/utility-scripts.md
               - Miscellaneous:
-                - microservices/device/supported/device-onvif-camera/supplementary-info/control-plane-events.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/ws-discovery.md
-                - microservices/device/supported/device-onvif-camera/supplementary-info/onvif-footnotes.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/control-plane-events.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/ws-discovery.md
+                - microservices/device/services/device-onvif-camera/supplementary-info/onvif-footnotes.md
           - Device USB Camera:
-              - microservices/device/supported/device-usb-camera/General.md
+              - microservices/device/services/device-usb-camera/General.md
               - Walkthrough:
-                - microservices/device/supported/device-usb-camera/walkthrough/setup.md
-                - microservices/device/supported/device-usb-camera/walkthrough/deployment.md
-                - microservices/device/supported/device-usb-camera/walkthrough/general-usage.md
-                - microservices/device/supported/device-usb-camera/walkthrough/custom-build.md
+                - microservices/device/services/device-usb-camera/walkthrough/setup.md
+                - microservices/device/services/device-usb-camera/walkthrough/deployment.md
+                - microservices/device/services/device-usb-camera/walkthrough/general-usage.md
+                - microservices/device/services/device-usb-camera/walkthrough/custom-build.md
               - Supplementary Information:
-                - microservices/device/supported/device-usb-camera/supplementary-info/USB-protocol.md
-                - microservices/device/supported/device-usb-camera/supplementary-info/discovery.md
-                - microservices/device/supported/device-usb-camera/supplementary-info/advanced-options.md   
-          - Device Virtual: microservices/device/supported/device-virtual/Ch-VirtualDevice.md
+                - microservices/device/services/device-usb-camera/supplementary-info/USB-protocol.md
+                - microservices/device/services/device-usb-camera/supplementary-info/discovery.md
+                - microservices/device/services/device-usb-camera/supplementary-info/advanced-options.md
+          - Device Virtual: microservices/device/services/device-virtual/Ch-VirtualDevice.md
         - V3 Migration: microservices/device/V3Migration.md
       - Application:
-        - microservices/application/ApplicationServices.md
+        - Overview: microservices/application/ApplicationServices.md
         - Getting Started: microservices/application/GettingStarted.md
         - Triggers: microservices/application/Triggers.md
         - Application Functions SDK:
-            - App Functions ADK: microservices/application/ApplicationFunctionsSDK.md
+            - Overview: microservices/application/ApplicationFunctionsSDK.md
             - microservices/application/ApplicationServiceAPI.md
             - microservices/application/AppFunctionContextAPI.md
             - microservices/application/ErrorHandling.md
             - microservices/application/BuiltIn.md
             - microservices/application/AdvancedTopics.md
         - microservices/application/GeneralAppServiceConfig.md
+        - Application Services:
+            - Available Services: microservices/application/services/AvailableAppServices.md
+            - microservices/application/services/AppServiceConfigurable.md
+            - microservices/application/services/AppRecordReplay.md
+            - microservices/application/services/AppLLRPInventory.md
         - V3 Migration: microservices/application/V3Migration.md
-        - Available Services:
-            - Overview: microservices/application/available/AvailableAppServices.md
-            - microservices/application/available/AppServiceConfigurable.md
-            - microservices/application/available/AppRecordReplay.md
-            - microservices/application/available/AppLLRPInventory.md
       - SDKs:
-        - microservices/application/ApplicationFunctionsSDK.md
+        - Application Functions SDK: microservices/application/ApplicationFunctionsSDK.md
         - microservices/device/sdk/Ch-DeviceSDK.md
       - Configuration & Registry:
         - microservices/configuration/ConfigurationAndRegistry.md
