--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,48 +67,57 @@ nav:
         - Device SDK API: microservices/device/sdk/SDK-Go-API.md
         - Device Services:
           - Available Services: microservices/device/services/Ch-DeviceServiceList.md
-          - Device Onvif Camera: 
-            - microservices/device/services/device-onvif-camera/General.md
-            - microservices/device/services/device-onvif-camera/swagger.md
-            - Walkthrough:
-              - microservices/device/services/device-onvif-camera/Walkthrough/setup.md
-              - microservices/device/services/device-onvif-camera/Walkthrough/deployment.md
-              - microservices/device/services/device-onvif-camera/Walkthrough/general-usage.md
-              - microservices/device/services/device-onvif-camera/Walkthrough/custom-build.md
-            - Supplementary Information:
-              - ONVIF Protocol:
-                - microservices/device/services/device-onvif-camera/supplementary-info/ONVIF-protocol.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/onvif-user-authentication.md
-              - Features: 
-                - microservices/device/services/device-onvif-camera/supplementary-info/custom-metadata-feature.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/friendlyname-mac.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/device-status.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/auto-discovery.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/credentials.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/reboot-needed.md
-              - API Reference:
-                - microservices/device/services/device-onvif-camera/supplementary-info/api-analytic-support.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/api-event-handling.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/api-usage-user-handling.md
-              - Utility:
-                - microservices/device/services/device-onvif-camera/supplementary-info/test-with-postman.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/utility-scripts.md
-              - Miscellaneous:
-                - microservices/device/services/device-onvif-camera/supplementary-info/control-plane-events.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/ws-discovery.md
-                - microservices/device/services/device-onvif-camera/supplementary-info/onvif-footnotes.md
+          - Device BacNet: microservices/device/services/device-bacnet.md
+          - Device COAP: microservices/device/services/device-coap.md
+          - Device GPIO: microservices/device/services/device-gpio.md
+          - Device ModBus: microservices/device/services/device-modbus.md
+          - Device MQTT: microservices/device/services/device-mqtt.md
+          - Device Onvif Camera:
+              - microservices/device/services/device-onvif-camera/General.md
+              - microservices/device/services/device-onvif-camera/swagger.md
+              - Walkthrough:
+                  - microservices/device/services/device-onvif-camera/Walkthrough/setup.md
+                  - microservices/device/services/device-onvif-camera/Walkthrough/deployment.md
+                  - microservices/device/services/device-onvif-camera/Walkthrough/general-usage.md
+                  - microservices/device/services/device-onvif-camera/Walkthrough/custom-build.md
+              - Supplementary Information:
+                  - ONVIF Protocol:
+                      - microservices/device/services/device-onvif-camera/supplementary-info/ONVIF-protocol.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/onvif-user-authentication.md
+                  - Features:
+                      - microservices/device/services/device-onvif-camera/supplementary-info/custom-metadata-feature.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/friendlyname-mac.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/device-status.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/auto-discovery.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/credentials.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/reboot-needed.md
+                  - API Reference:
+                      - microservices/device/services/device-onvif-camera/supplementary-info/api-analytic-support.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/api-event-handling.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/api-usage-user-handling.md
+                  - Utility:
+                      - microservices/device/services/device-onvif-camera/supplementary-info/test-with-postman.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/utility-scripts.md
+                  - Miscellaneous:
+                      - microservices/device/services/device-onvif-camera/supplementary-info/control-plane-events.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/ws-discovery.md
+                      - microservices/device/services/device-onvif-camera/supplementary-info/onvif-footnotes.md
+          - Device REST: microservices/device/services/device-rest.md
+          - Device RFID LLRP: microservices/device/services/device-rfid-llrp.md
+          - Device SNMP: microservices/device/services/device-snmp.md
+          - Device UART: microservices/device/services/device-uart.md
           - Device USB Camera:
               - microservices/device/services/device-usb-camera/General.md
               - Walkthrough:
-                - microservices/device/services/device-usb-camera/walkthrough/setup.md
-                - microservices/device/services/device-usb-camera/walkthrough/deployment.md
-                - microservices/device/services/device-usb-camera/walkthrough/general-usage.md
-                - microservices/device/services/device-usb-camera/walkthrough/custom-build.md
+                  - microservices/device/services/device-usb-camera/walkthrough/setup.md
+                  - microservices/device/services/device-usb-camera/walkthrough/deployment.md
+                  - microservices/device/services/device-usb-camera/walkthrough/general-usage.md
+                  - microservices/device/services/device-usb-camera/walkthrough/custom-build.md
               - Supplementary Information:
-                - microservices/device/services/device-usb-camera/supplementary-info/USB-protocol.md
-                - microservices/device/services/device-usb-camera/supplementary-info/discovery.md
-                - microservices/device/services/device-usb-camera/supplementary-info/advanced-options.md
+                  - microservices/device/services/device-usb-camera/supplementary-info/USB-protocol.md
+                  - microservices/device/services/device-usb-camera/supplementary-info/discovery.md
+                  - microservices/device/services/device-usb-camera/supplementary-info/advanced-options.md
           - Device Virtual: microservices/device/services/device-virtual/Ch-VirtualDevice.md
         - V3 Migration: microservices/device/V3Migration.md
       - Application:
