docs: updated the overview and setup section
Signed-off-by: preethi-satishcandra <preethi.satishchandra@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,8 +111,8 @@ nav:
                 - microservices/device/services/device-usb-camera/supplementary-info/advanced-options.md
           - Device Virtual: microservices/device/services/device-virtual/Ch-VirtualDevice.md
           - Remote Deployment:
-              - ./microservices/device/remote/Ch-RemoteNonSecure.md
-              - ./microservices/device/remote/Ch-RemoteSecure.md
+              - Non-Secure Mode: microservices/device/remote/Ch-RemoteNonSecure.md
+              - Secure Mode: microservices/device/remote/Ch-RemoteSecure.md
         - V3 Migration: microservices/device/V3Migration.md
       - Application:
         - Overview: microservices/application/ApplicationServices.md
