refactor: Enabled the mkdocs footer for prev/next nav
Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
   favicon: 'assets/logo_edgex.png'
   features:
     - navigation.tabs  # changed with version 6 of mkdocs-materials
+    - navigation.footer
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
