refactor: Rework Core Data docs to match updated 3.1 structure
Closes #1245

Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,13 @@ nav:
     - Services:
       - Core: 
         - microservices/core/Ch-CoreServices.md
-        - microservices/core/data/Ch-CoreData.md
+        - Core Data:
+            - Purpose: microservices/core/data/Purpose.md
+            - Getting Started: microservices/core/data/GettingStarted.md
+            - Configuration: microservices/core/data/Configuration.md
+            - API Reference: microservices/core/data/APIReference.md
+            - Source Code: microservices/core/data/SourceCode.md
+            - Events and Readings: microservices/core/data/EventsAndReadings.md
         - microservices/core/metadata/Ch-Metadata.md
         - microservices/core/command/Ch-Command.md
         - microservices/core/database/Ch-Redis.md
