fix: address pr feedback
Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,8 @@ nav:
             - Configuration: microservices/core/data/Configuration.md
             - API Reference: microservices/core/data/APIReference.md
             - Source Code: microservices/core/data/SourceCode.md
-            - Events and Readings: microservices/core/data/EventsAndReadings.md
+            - Additional Details:
+              - Events and Readings: microservices/core/data/EventsAndReadings.md
         - microservices/core/metadata/Ch-Metadata.md
         - microservices/core/command/Ch-Command.md
         - microservices/core/database/Ch-Redis.md
