refactor: Added page title override for browser tab
also made other nav tweaks

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,23 @@ nav:
       - getting-started/Ch-GettingStartedDockerUsers.md
       - getting-started/Ch-GettingStartedSnapUsers.md
       - getting-started/tools/Ch-GUI.md
+    - Developer:
+        - getting-started/Ch-GettingStartedDevelopers.md
+        - getting-started/Ch-GettingStartedGoDevelopers.md
+        - getting-started/Ch-GettingStartedCDevelopers.md
+        - getting-started/Ch-GettingStartedHybrid.md
+        - Native Build and Run Guides:
+            - getting-started/native/Ch-BuildRunNative.md
+            - getting-started/native/Ch-BuildRunOnLinuxDistro.md
+            - getting-started/native/Ch-BuildRunOnArm32.md
+            - getting-started/native/Ch-BuildRunOnWindows.md
+        - Application Functions SDK: microservices/application/sdk/Purpose.md
+        - Device Services:
+            - getting-started/Ch-GettingStartedSDK.md
+            - getting-started/Ch-GettingStartedSDK-C.md
+            - getting-started/Ch-GettingStartedSDK-Go.md
+        - getting-started/Ch-GettingStartedUsersNexus.md
+        - getting-started/Ch-GettingStartedDTOValidation.md
     - Services:
       - Core: 
         - microservices/core/Ch-CoreServices.md
@@ -68,10 +85,7 @@ nav:
         - microservices/support/notifications/Ch-AlertsNotifications.md
         - microservices/support/scheduler/Ch-Scheduler.md
         - microservices/support/eKuiper/Ch-eKuiper.md
-      - SDKs:
-          - Application Functions SDK: microservices/application/sdk/Purpose.md
-          - microservices/device/sdk/Ch-DeviceSDK.md
-      - Device: 
+      - Device:
         - Overview: microservices/device/Ch-DeviceServices.md
         - microservices/device/profile/Ch-DeviceProfile.md
         - Device Service SDK: microservices/device/sdk/Ch-DeviceSDK.md
@@ -145,7 +159,7 @@ nav:
             - APIs:
                 - Application Service: microservices/application/sdk/api/ApplicationServiceAPI.md
                 - App Function Context: microservices/application/sdk/api/AppFunctionContextAPI.md
-                - Built-in Pipeline Functions: microservices/application/sdk/api/BuiltInPipelineFunctions.md
+                - Pipeline Functions: microservices/application/sdk/api/BuiltInPipelineFunctions.md
             - Source Code: microservices/application/sdk/SourceCode.md
             - Additional Details:
                 - Triggers: microservices/application/sdk/details/Triggers.md
@@ -207,23 +221,6 @@ nav:
         - Configuration Migration: microservices/configuration/V3MigrationCommonConfig.md
         - Device Service Migration: microservices/device/V3Migration.md
         - Application Service Migration: microservices/application/V3Migration.md
-    - Developer:
-      - getting-started/Ch-GettingStartedDevelopers.md
-      - getting-started/Ch-GettingStartedGoDevelopers.md
-      - getting-started/Ch-GettingStartedCDevelopers.md
-      - getting-started/Ch-GettingStartedHybrid.md
-      - Native Build and Run Guides:
-        - getting-started/native/Ch-BuildRunNative.md
-        - getting-started/native/Ch-BuildRunOnLinuxDistro.md
-        - getting-started/native/Ch-BuildRunOnArm32.md
-        - getting-started/native/Ch-BuildRunOnWindows.md
-      - Application Functions SDK: microservices/application/sdk/GettingStarted.md
-      - Device Services:
-        - getting-started/Ch-GettingStartedSDK.md
-        - getting-started/Ch-GettingStartedSDK-C.md
-        - getting-started/Ch-GettingStartedSDK-Go.md
-      - getting-started/Ch-GettingStartedUsersNexus.md
-      - getting-started/Ch-GettingStartedDTOValidation.md
     - Tutorials:
       - examples/Ch-ExamplesVirtualDeviceService.md
       - examples/Ch-ExamplesSendingAndConsumingBinary.md
@@ -259,7 +256,7 @@ nav:
       - api/support/Ch-APISupportNotifications.md
       - api/support/Ch-APISupportScheduler.md
       - api/devices/Ch-APIDeviceSDK.md
-      - api/applications/Ch-APIAppFunctionsSDK.md
+      - App Services: microservices/application/ApiReference.md
       - api/applications/Ch-APIRulesEngine.md  
   - Reference:
     - general/Definitions.md
