refactor: Rework page titles
combine top and page heading into top heading
Add title override for Web Browser page title

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ nav:
             - Purpose: microservices/core/data/Purpose.md
             - Getting Started: microservices/core/data/GettingStarted.md
             - Configuration: microservices/core/data/Configuration.md
-            - API Reference: microservices/core/data/APIReference.md
+            - API Reference: microservices/core/data/ApiReference.md
             - Source Code: microservices/core/data/SourceCode.md
             - Additional Details:
               - Events and Readings: microservices/core/data/details/EventsAndReadings.md
@@ -250,7 +250,7 @@ nav:
     - APIs: 
       - api/Ch-APIIntroduction.md
       - api/core/Ch-APICoreCommand.md
-      - api/core/Ch-APICoreData.md
+      - Core Data: microservices/core/data/ApiReference.md
       - api/core/Ch-APICoreMetadata.md
       - api/core/Ch-APICoreConfigurationAndRegistry.md
       - api/support/Ch-APISupportNotifications.md
