refactor: Rework Core Metadata docs to match updated 3.1 structure
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,7 +87,15 @@ nav:
             - Source Code: microservices/core/data/SourceCode.md
             - Additional Details:
               - Events and Readings: microservices/core/data/details/EventsAndReadings.md
-        - microservices/core/metadata/Ch-Metadata.md
+        - Core Metadata:
+            - Purpose: microservices/core/metadata/Purpose.md
+            - Getting Started: microservices/core/metadata/GettingStarted.md
+            - Configuration: microservices/core/metadata/Configuration.md
+            - API Reference: microservices/core/metadata/ApiReference.md
+            - Source Code: microservices/core/metadata/SourceCode.md
+            - Additional Details:
+              - Device Profile: microservices/core/metadata/details/DeviceProfile.md
+              - Device System Events: microservices/core/metadata/details/DeviceSystemEvents.md
         - microservices/core/command/Ch-Command.md
         - microservices/core/database/Ch-Redis.md
       - Supporting: 
