refactor: Device Service refactor - Phase 1
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,8 +61,6 @@ nav:
         - Application Functions SDK: microservices/application/sdk/Purpose.md
         - Device Services:
             - getting-started/Ch-GettingStartedSDK.md
-            - getting-started/Ch-GettingStartedSDK-C.md
-            - getting-started/Ch-GettingStartedSDK-Go.md
         - getting-started/Ch-GettingStartedUsersNexus.md
         - getting-started/Ch-GettingStartedDTOValidation.md
     - APIs:
@@ -116,66 +114,23 @@ nav:
             - Source Code: microservices/support/scheduler/SourceCode.md
         - microservices/support/eKuiper/Ch-eKuiper.md
       - Device:
-        - Overview: microservices/device/Ch-DeviceServices.md
-        - Device Service SDK: microservices/device/sdk/Ch-DeviceSDK.md
-        - Device SDK API: microservices/device/sdk/SDK-Go-API.md
-        - Device Services:
-          - Available Services: microservices/device/services/Ch-DeviceServiceList.md
-          - Device BacNet: microservices/device/services/device-bacnet.md
-          - Device COAP: microservices/device/services/device-coap.md
-          - Device GPIO: microservices/device/services/device-gpio.md
-          - Device ModBus: microservices/device/services/device-modbus.md
-          - Device MQTT: microservices/device/services/device-mqtt.md
-          - Device Onvif Camera:
-              - microservices/device/services/device-onvif-camera/General.md
-              - microservices/device/services/device-onvif-camera/swagger.md
-              - Walkthrough:
-                  - microservices/device/services/device-onvif-camera/Walkthrough/setup.md
-                  - microservices/device/services/device-onvif-camera/Walkthrough/deployment.md
-                  - microservices/device/services/device-onvif-camera/Walkthrough/general-usage.md
-                  - microservices/device/services/device-onvif-camera/Walkthrough/custom-build.md
-              - Supplementary Information:
-                  - ONVIF Protocol:
-                      - microservices/device/services/device-onvif-camera/supplementary-info/ONVIF-protocol.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/onvif-user-authentication.md
-                  - Features:
-                      - microservices/device/services/device-onvif-camera/supplementary-info/custom-metadata-feature.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/friendlyname-mac.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/device-status.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/auto-discovery.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/credentials.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/reboot-needed.md
-                  - API Reference:
-                      - microservices/device/services/device-onvif-camera/supplementary-info/api-analytic-support.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/api-event-handling.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/api-usage-user-handling.md
-                  - Utility:
-                      - microservices/device/services/device-onvif-camera/supplementary-info/test-with-postman.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/utility-scripts.md
-                  - Miscellaneous:
-                      - microservices/device/services/device-onvif-camera/supplementary-info/control-plane-events.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/ws-discovery.md
-                      - microservices/device/services/device-onvif-camera/supplementary-info/onvif-footnotes.md
-          - Device REST: microservices/device/services/device-rest.md
-          - Device RFID LLRP: microservices/device/services/device-rfid-llrp.md
-          - Device SNMP: microservices/device/services/device-snmp.md
-          - Device UART: microservices/device/services/device-uart.md
-          - Device USB Camera:
-              - microservices/device/services/device-usb-camera/General.md
-              - Walkthrough:
-                  - microservices/device/services/device-usb-camera/walkthrough/setup.md
-                  - microservices/device/services/device-usb-camera/walkthrough/deployment.md
-                  - microservices/device/services/device-usb-camera/walkthrough/general-usage.md
-                  - microservices/device/services/device-usb-camera/walkthrough/custom-build.md
-              - Supplementary Information:
-                  - microservices/device/services/device-usb-camera/supplementary-info/USB-protocol.md
-                  - microservices/device/services/device-usb-camera/supplementary-info/discovery.md
-                  - microservices/device/services/device-usb-camera/supplementary-info/advanced-options.md
-          - Device Virtual: microservices/device/services/device-virtual/Ch-VirtualDevice.md
-          - Remote Deployment:
-              - Non-Secure Mode: microservices/device/remote/Ch-RemoteNonSecure.md
-              - Secure Mode: microservices/device/remote/Ch-RemoteSecure.md
+        - Device Service: microservices/device/DeviceService.md
+        - Getting Started: microservices/device/GettingStarted.md
+        - Configuration: microservices/device/Configuration.md
+        - API Reference: microservices/device/ApiReference.md
+        - Device Service SDK:
+            - Purpose: microservices/device/sdk/Purpose.md
+            - Getting Started: 
+                - GettingStartedSDK-C: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-C.md
+                - GettingStartedSDK-Go: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-Go.md
+            - APIs:
+                - C Device SDK API: microservices/device/sdk/api/CDeviceSDKAPI.md            
+                - Go Device SDK API: microservices/device/sdk/api/GoDeviceSDKAPI.md
+            - Source Code: microservices/device/sdk/SourceCode.md
+        - Additional Details: 
+            - Device Discovery: microservices/device/details/DeviceDiscovery.md
+            - Test and Demonstration Device Services: microservices/device/details/TestandDemoDeviceServices.md
+        - Services: microservices/device/ApiReference.md
         - V3 Migration: microservices/device/V3Migration.md
       - Application:
         - Application Services: microservices/application/ApplicationServices.md
