fix: address request change
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,9 +127,17 @@ nav:
                 - C Device SDK API: microservices/device/sdk/api/CDeviceSDKAPI.md            
                 - Go Device SDK API: microservices/device/sdk/api/GoDeviceSDKAPI.md
             - Source Code: microservices/device/sdk/SourceCode.md
+            - Additional Details:
+                - Custom Configuration: microservices/device/sdk/details/CustomConfiguration.md
+                - Custom Rest Apis: microservices/device/sdk/details/CustomRestApis.md
+                - Custom Service Metrics: microservices/device/sdk/details/CustomServiceMetrics.md
+                - Secrets: microservices/device/sdk/details/Secrets.md
         - Additional Details: 
+            - Command-line Options: microservices/device/details/CommandLine.md
+            - Environment Variables: microservice/device/details/EnvironmentVariables.md
             - Device Discovery: microservices/device/details/DeviceDiscovery.md
-            - Test and Demonstration Device Services: microservices/device/details/TestandDemoDeviceServices.md
+            - Seeding Secrets: microservices/device/details/SeedingSecrets.md
+            - Service Metrics: microservices/device/details/ServiceMetrics.md
         - Services: microservices/device/ApiReference.md
         - V3 Migration: microservices/device/V3Migration.md
       - Application:
