refactor: Rework Support Notifications docs to new layout
Closes #1268

Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,12 @@ nav:
         - microservices/core/database/Ch-Redis.md
       - Supporting: 
         - microservices/support/Ch-SupportingServices.md
-        - microservices/support/notifications/Ch-AlertsNotifications.md
+        - Notifications:
+            - Purpose: microservices/support/notifications/Purpose.md
+            - Getting Started: microservices/support/notifications/GettingStarted.md
+            - Configuration: microservices/support/notifications/Configuration.md
+            - API Reference: microservices/support/notifications/ApiReference.md
+            - Source Code: microservices/support/notifications/SourceCode.md
         - Scheduler:
             - Purpose: microservices/support/scheduler/Purpose.md
             - Getting Started: microservices/support/scheduler/GettingStarted.md
