fix: request changes and broken links
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,7 @@ nav:
             - getting-started/native/Ch-BuildRunOnWindows.md
         - Application Functions SDK: microservices/application/sdk/Purpose.md
         - Device Services:
-            - getting-started/Ch-GettingStartedSDK.md
+            - microservices/device/GettingStarted.md
         - getting-started/Ch-GettingStartedUsersNexus.md
         - getting-started/Ch-GettingStartedDTOValidation.md
     - APIs:
@@ -124,7 +124,9 @@ nav:
                 - GettingStartedSDK-C: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-C.md
                 - GettingStartedSDK-Go: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-Go.md
             - APIs:
-                - C Device SDK API: microservices/device/sdk/api/CDeviceSDKAPI.md            
+                - C Device SDK :
+                   - APIs: microservices/device/sdk/Capi/CDeviceSDKAPI.md
+                   - C Utilities: microservices/device/sdk/Capi/CUtilities.md  
                 - Go Device SDK API: microservices/device/sdk/api/GoDeviceSDKAPI.md
             - Source Code: microservices/device/sdk/SourceCode.md
             - Additional Details:
@@ -134,7 +136,7 @@ nav:
                 - Secrets: microservices/device/sdk/details/Secrets.md
         - Additional Details: 
             - Command-line Options: microservices/device/details/CommandLine.md
-            - Environment Variables: microservice/device/details/EnvironmentVariables.md
+            - Environment Variables: microservices/device/details/EnvironmentVariables.md
             - Device Discovery: microservices/device/details/DeviceDiscovery.md
             - Seeding Secrets: microservices/device/details/SeedingSecrets.md
             - Service Metrics: microservices/device/details/ServiceMetrics.md
