refactor: Rework support scheduler docs into 3.1 format
Closes #1269

Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,7 +101,12 @@ nav:
       - Supporting: 
         - microservices/support/Ch-SupportingServices.md
         - microservices/support/notifications/Ch-AlertsNotifications.md
-        - microservices/support/scheduler/Ch-Scheduler.md
+        - Scheduler:
+            - Purpose: microservices/support/scheduler/Purpose.md
+            - Getting Started: microservices/support/scheduler/GettingStarted.md
+            - Configuration: microservices/support/scheduler/Configuration.md
+            - API Reference: microservices/support/scheduler/ApiReference.md
+            - Source Code: microservices/support/scheduler/SourceCode.md
         - microservices/support/eKuiper/Ch-eKuiper.md
       - Device:
         - Overview: microservices/device/Ch-DeviceServices.md
