refactor: Core Command Refactor
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,14 @@ nav:
             - Additional Details:
               - Device Profile: microservices/core/metadata/details/DeviceProfile.md
               - Device System Events: microservices/core/metadata/details/DeviceSystemEvents.md
-        - microservices/core/command/Ch-Command.md
+        - Core Command:
+            - Purpose: microservices/core/command/Purpose.md
+            - Getting Started: microservices/core/command/GettingStarted.md
+            - Configuration: microservices/core/command/Configuration.md
+            - API Reference: microservices/core/command/ApiReference.md
+            - Source Code: microservices/core/command/SourceCode.md
+            - Additional Details:
+              - Regex Get Command: microservices/core/command/details/RegexGetCommand.md
         - microservices/core/database/Ch-Redis.md
       - Supporting: 
         - microservices/support/Ch-SupportingServices.md
