fix: change how to title
Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,7 +104,7 @@ nav:
             - Purpose: microservices/support/notifications/Purpose.md
             - Getting Started: microservices/support/notifications/GettingStarted.md
             - How-To Guides:
-                - Send Email Notifications: microservices/support/notifications/HowTo_EmailNotifications.md
+                - Configure Email Notifications: microservices/support/notifications/HowTo_EmailNotifications.md
             - Configuration: microservices/support/notifications/Configuration.md
             - API Reference: microservices/support/notifications/ApiReference.md
             - Source Code: microservices/support/notifications/SourceCode.md
