fix: address request change
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,8 +121,10 @@ nav:
         - Device Service SDK:
             - Purpose: microservices/device/sdk/Purpose.md
             - Getting Started: 
-                - GettingStartedSDK-C: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-C.md
-                - GettingStartedSDK-Go: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-Go.md
+                -  C Device SDK:
+                   - GettingStartedSDK-C: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-C.md
+                -  Go Device SDK:
+                   - GettingStartedSDK-Go: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-Go.md
             - APIs:
                 - C Device SDK :
                    - APIs: microservices/device/sdk/api/CDeviceSDK/CDeviceSDKAPI.md
