refactor: Data retention docs
close #1266
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ nav:
             - Source Code: microservices/core/data/SourceCode.md
             - Additional Details:
               - Events and Readings: microservices/core/data/details/EventsAndReadings.md
+              - Data Retention: microservices/core/data/details/DataRetention.md
         - Core Metadata:
             - Purpose: microservices/core/metadata/Purpose.md
             - Getting Started: microservices/core/metadata/GettingStarted.md
@@ -108,6 +109,8 @@ nav:
             - Configuration: microservices/support/notifications/Configuration.md
             - API Reference: microservices/support/notifications/ApiReference.md
             - Source Code: microservices/support/notifications/SourceCode.md
+            - Additional Details:
+                - Data Retention: microservices/support/notifications/details/DataRetention.md
         - Scheduler:
             - Purpose: microservices/support/scheduler/Purpose.md
             - Getting Started: microservices/support/scheduler/GettingStarted.md
