feat: Add documentation for Device REST
closes #1280

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -161,7 +161,7 @@ nav:
                 - Custom Service Metrics: microservices/device/sdk/details/CustomServiceMetrics.md
                 - Secrets: microservices/device/sdk/details/Secrets.md
         - V3 Migration: microservices/device/V3Migration.md
-        - Services: 
+        - Services:
           - Device BacNet: microservices/device/services/device-bacnet.md
           - Device COAP: microservices/device/services/device-coap.md
           - Device GPIO: microservices/device/services/device-gpio.md
@@ -198,7 +198,14 @@ nav:
                       - microservices/device/services/device-onvif-camera/supplementary-info/getting-started-with-docker-security.md
                       - microservices/device/services/device-onvif-camera/supplementary-info/ws-discovery.md
                       - microservices/device/services/device-onvif-camera/supplementary-info/onvif-footnotes.md
-          - Device REST: microservices/device/services/device-rest.md
+          - Device REST:
+              - Purpose: microservices/device/services/DeviceRest/Purpose.md
+              - Getting Started: microservices/device/services/DeviceRest/GettingStarted.md
+              - How-To Guides:
+                  - Testing: microservices/device/services/DeviceRest/howto/Testing.md
+              - Configuration: microservices/device/services/DeviceRest/Configuration.md
+              - API Reference: microservices/device/services/DeviceRest/ApiReference.md
+              - Source Code: microservices/device/services/DeviceRest/SourceCode.md
           - Device RFID LLRP: microservices/device/services/device-rfid-llrp.md
           - Device SNMP: microservices/device/services/device-snmp.md
           - Device UART: microservices/device/services/device-uart.md
